Atualização do texto

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span class="box">20</span>
         <div class="mensagem__computador">O número secreto é maior. <i class="fa-solid fa-arrow-up-long"></i></div> -->
     </div>
-    <footer class="rodape">Feito por Valquiria Pianheri no curso da Alura.</footer>
+    <footer class="rodape">Feito por Valquiria Pianheri.</footer>
     <script src="app/sortearNumero.js"></script>
     <script src="app/reconhecimentoFala.js"></script>
     <script src="app/verificadorNumero.js"></script>
